# CARGO_LOAD

./: .gitignore  requirements.txt
load-optimizer/: .cursorrules  .gitignore  README.md  dy  pyproject.toml  requirements.txt
load-optimizer/src/load_optimizer/: __init__.py  api.py  brokeragent.py  capacity.py  cli.py  containers.py  db.py  economic_optimizer.py  geometry.py  main.py  metrics.py  models.py  plan.json  run_schema.py  schema.sql  shipment.json  verify_schema.py
load-optimizer/src/load_optimizer/io/: __init__.py  schemas.py
load-optimizer/src/load_optimizer/packing/: __init__.py  constraints.py  first_fit.py  heuristics.py  multi_container.py
load-optimizer/src/load_optimizer/tests/: multi_container.py  test_multi_container.py  test_smoke.py
load-optimizer/src/load_optimizer/tests/tests/: test_weight_constraint.py
load-optimizer/tests/: test_api_output.py  test_capacity_limits.py  test_geometry.py
