[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "load-optimizer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "pydantic",
  "orjson",
  "ortools",
  "fastapi",
  "uvicorn[standard]",
  "openai",
  "httpx",
  "certifi",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "mypy",
]

[project.scripts]
load-optimizer = "load_optimizer.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]

